# TestingDVBT2

./: CMakeLists.txt  README.md  dvb.files  dvb.includes  dvb_drive.csv  dvb_test.csv  sig.txt
src/: CMakeLists.txt  mainwindow.cpp  ui_QGCMapTool.h  ui_QGCMapToolBar.h  ui_mapripform.h  ui_testdialog.h
src/dvb/: dvbconfigdialog.cpp  dvbdevice.cpp  dvbdevice_linux.cpp  dvbscan.cpp  dvbscan.h  dvbscandialog.cpp  dvbsi.cpp
src/dvbtest/: pidscan.cpp  pidscan.h  rtlfetcherthread.cpp  rtlfetcherthread.h  testdialog.cpp  testdialog.h  testdialog.ui  testdialog.ui.autosave
src/dvbtest/glwidget/: glwidget.cpp  glwidget.h  logo.cpp  window.cpp  window.h
src/dvbtest/omap/: common.h
src/dvbtest/omap/core/: accessmode.cpp  accessmode.h  geodecoderstatus.cpp  geodecoderstatus.h  maptype.cpp  maptype.h
src/dvbtest/omap/internals/: mousewheelzoomtype.h  mousezoom.cpp
src/dvbtest/omap/internals/projections/: lks94projection.cpp
src/dvbtest/omap/map/: MAV2DIcon.cc  MAV2DIcon.h  QGCMapTool.cc  QGCMapTool.ui  QGCMapToolBar.cc  QGCMapWidget.cc  QGCMapWidget.h  Waypoint2DIcon.cc  Waypoint2DIcon.h
src/dvbtest/omap/mapwidget/: Waypoint.cc  Waypoint.h  graphicsitem.cpp  graphicsitem.h  homeitem.cpp  omapconfiguration.h  opmapcontrol.h  opmapwidget.h  trailitem.cpp  uavitem.cpp  waypointlineitem.h
src/dvbtest/rtl_sdr/: librtlsdr.c  rtl_sdr.c  tuner_fc0012.c  tuner_fc2580.c  tuner_r82xx.c
src/dvbtest/rtl_sdr/convenience/: convenience.cpp  convenience.h
src/dvbtest/rtl_sdr/include/: tuner_fc2580.h  tuner_r82xx.h
src/kaffeine_autogen/: moc_predefs.h
